[package]
name = "risk_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-beta.1"
signal-hook = "0.3.17"
lapin = "2.5.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
futures-lite = "1.13.0"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"
